# fdtd

./: Cargo.toml  README.md  build.rs  fdtd_notes
parallel/: Cargo.toml  README.md  TODO  futhark.pkg
parallel/lib/fdtd/: main.fut  step.fut
parallel/src/: main.rs
scripts/: 1d_snapshot.py  1d_waterfall.py  2d_snapshot.py
src/: abc.rs  error.rs  fdtd.rs  grid.rs  lib.rs  main.rs  ricker.rs  snapshot.rs  step.rs
src/c/: Makefile  ricker_bug.c
tests/: create_grid.rs  fut_1d.rs  fut_2d.rs  fut_3d.rs
tests/util/: create_grid.rs  grid_eq.rs  mod.rs
