[package]
name = "fdtd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.*", features = ["derive"] }
serde_json = { version = "1.0.*" }
crow = { version = "0.7.2" }
fdtd-futhark = { path = "parallel/fdtd-futhark" }
